--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -739,3 +739,6 @@ input[type="text"], input[type="password"] {
      margin-bottom: 0; 
     border-radius: 0;
 }
+#accordion .card{
+    margin-bottom: 10px
+}
