--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
                 <div class="module widget-handle mobile-toggle right visible-sm visible-xs">
                     <i class="ti-menu"></i>
                 </div>
-                <div class="module-group right">
+                <div class="module-group right" style="">
                     <div class="module right">
                         <ul class="menu">
                             <li>
