--- a/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
+++ b/ProjectUbuild/Views/FullHouse/HouseDesign.cshtml
@@ -19,7 +19,7 @@
             <div class="col-md-6 text-right hidden-xs hidden-sm">
                 <ol class="breadcrumb breadcrumb-2">
                     <li>
-                        @Html.ActionLink("Home Choice", "Index", "FullHouse", new { }, null)
+                        @Html.ActionLink("Home Selection", "Index", "FullHouse", new { }, null)
                     </li>
                     <li class="active">Home Customization</li>
                 </ol>
