--- a/ProjectUbuild/Views/FullHouse/Index.cshtml
+++ b/ProjectUbuild/Views/FullHouse/Index.cshtml
@@ -20,7 +20,7 @@
                     <li>
                         @Html.ActionLink("Home", "Index", "Home", new { }, null)
                     </li>
-                    <li class="active">Home Design</li>
+                    <li class="active">Home Selection</li>
                 </ol>
             </div>
         </div>
