--- a/ProjectUbuild/Views/Home/Index.cshtml
+++ b/ProjectUbuild/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
                         <p class="lead">
                             We can have a short video clip playing here
                         </p>
+                        <a class="btn btn-lg btn-filled" href="/fullhouse/index">Apply now</a>
                     </div>
                 </div>
                 <!--end of row-->
