--- a/ProjectUbuild/Views/Shared/_Layout.cshtml
+++ b/ProjectUbuild/Views/Shared/_Layout.cshtml
@@ -11,16 +11,15 @@
         <a id="top"></a>
         <nav class="">
             <div class="nav-utility">
-                <div class="module left hidden-xs">
+                <div class="module left hidden-sm hidden-xs">
                     <i class="fa fa-phone ">&nbsp;</i>
                     <span class="sub">Call Us Now : (+233) 0274121780</span>
-                    <i class="ti-email ">&nbsp;</i>
-                    <span class="sub hidden-xs">info@ubuild.ghlbank.com</span>
+                  
                 </div>
-                @*<div class="module left hidden-sm hidden-xs">
+                <div class="module left hidden-sm hidden-xs">
                         <i class="ti-email">&nbsp;</i>
                         <span class="sub">info@ubuild.ghlbank.com</span>
-                    </div>*@
+                    </div>
                 <div class="module right">
 
                     @if (Request.IsAuthenticated)
