--- a/ProjectUbuild/Views/Home/MyApplications.cshtml
+++ b/ProjectUbuild/Views/Home/MyApplications.cshtml
@@ -36,7 +36,7 @@
 
                     
                 </a>*@
-                @Html.ActionLink(" Start a new application", "Apply", "Loan", null, new { @class = " mb80 fa fa-file ", style = "display: inline-block;margin: 50px;font-size: 21px;color: darkgreen;" })
+               @* @Html.ActionLink(" Start a new application", "Apply", "Loan", null, new { @class = " mb80 fa fa-file ", style = "display: inline-block;margin: 50px;font-size: 21px;color: darkgreen;" })*@
                 <div class="tabbed-content text-tabs">
                     <ul class="tabs">
                         <li class="active">
