--- a/ProjectUbuild/Views/Loan/Eligibility.cshtml
+++ b/ProjectUbuild/Views/Loan/Eligibility.cshtml
@@ -59,13 +59,9 @@
                     <fieldset ng-show="builder.loanType=='Phase'">
                         <h2 class="fs-title">Choose Phase</h2>
                         <div>
-                            <select class="" ng-model="builder.phase">
+                            <select class="" ng-model="builder.phase" data-ng-options="item.RecordId as item.PhaseName for item in buildingPhases">
                                 <option value="">-Select Phase-</option>
-                                <option>Land</option>
-                                <option>Foundation</option>
-                                <option>Walls</option>
-                                <option>Roof</option>
-                                <option>Fittings and Fixtures</option>
+                                
                             </select>
                         </div>
                         <input type="button" name="previous" class="msformprevious action-button" value="Previous" />
@@ -101,9 +97,19 @@
                                     <input type="text" name="" ng-model="builder.loanInterestRate" value="0;100" id="loan_Irate" />
                                 </div>
                             </div>
+                            <div class="radio radio-success" ng-show="builder.currency">
+                                <span title="Choose this loan type buy a full house">
+                                    <input type="radio" checked="checked" ng-model="builder.loanTenureUnit"  id="tenureYears" name="tenureYears" value="Years">
+                                    <label for="tenureYears">Years</label>
+                                </span>
+                                <span style="display: inline-block" >
+                                    <input type="radio" ng-model="builder.loanTenureUnit" name="tenureMonths" id="tenureMonths" value="Months">
+                                    <label for="tenureMonths">Months</label>
+                                </span>
+                            </div>
 
                             <div class="form-group form-group-default" ng-show="builder.currency">
-                                <label>Enter Loan Tenure(Years)</label>
+                                <label>Enter Loan Tenure (<span data-ng-bind="builder.loanTenureUnit"></span>)</label>
                                 <div class="irs-wrapper danger">
                                     <input type="text" name="" ng-model="builder.loanTenure" value="12,24" id="loan_Tenure" />
                                 </div>
