--- a/ProjectUbuild/assets/foundry/css/custom.css
+++ b/ProjectUbuild/assets/foundry/css/custom.css
@@ -729,7 +729,7 @@ svg:not(:root) {
     margin-bottom: 10px
 }
 
-input[type="text"], input[type="password"] {
+/*input[type="text"], input[type="password"] {
     background: #f5f5f5;
     border: none;
     width: 100%;
@@ -738,7 +738,7 @@ input[type="text"], input[type="password"] {
     font-weight: 500;
      margin-bottom: 0; 
     border-radius: 0;
-}
+}*/
 #accordion .card{
     margin-bottom: 10px
 }
