--- a/ProjectUbuild/Views/Shared/_Scripts.cshtml
+++ b/ProjectUbuild/Views/Shared/_Scripts.cshtml
@@ -39,6 +39,7 @@
 <script src="~/assets/plugins/jquery-metrojs/MetroJs.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/jquery-sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
 <script src="~/assets/plugins/skycons/skycons.js" type="text/javascript"></script>
+<script src="~/assets/plugins/moment/moment.min.js"></script>
 <script src="~/assets/plugins/bootstrap-datepicker/js/bootstrap-datepicker.js" type="text/javascript"></script>
 <script src="~/assets/plugins/bootstrap-daterangepicker/daterangepicker.js"></script>
 <script src="~/assets/plugins/bootstrap-timepicker/bootstrap-timepicker.min.js"></script>
@@ -74,7 +75,7 @@
 <script src="~/assets/plugins/image-picker/image-picker.min.js"></script>
 <script src="~/assets/js/Controllers/index.js"></script>
 <script src="~/assets/js/form_wizard.js"></script>
-<script src="~/assets/js/form_elements.js"></script>
+
 <!-- END CORE TEMPLATE JS -->
 <!-- BEGIN PAGE LEVEL JS -->
 
