--- a/ProjectUbuild/Views/Home/About.cshtml
+++ b/ProjectUbuild/Views/Home/About.cshtml
@@ -9,15 +9,15 @@
     <div class="container-fluid">
         <div class="row" style="margin-top: 33px">
             <div class="col-md-6">
-                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">About <i>uBuild</i></h2>
-                <p class="lead mb0">What is <i>GHL-uBuild?</i>.</p>
+                <h2 class="uppercase mb8" style="font-size:25px;line-height:25px">About u-Build</h2>
+                <p class="lead mb0"><i>What is u-Build?</i>.</p>
             </div>
             <div class="col-md-6 text-right hidden-xs hidden-sm">
                 <ol class="breadcrumb breadcrumb-2">
                     <li>
                         @Html.ActionLink("Home", "Index", "Home", new { }, null)
                     </li>
-                    <li class="active">uBuild</li>
+                    <li class="active">u-Build</li>
                 </ol>
             </div>
         </div>
@@ -25,4 +25,40 @@
     </div>
     <!--end of container-->
 </section>
+<section style="margin-top: -60px">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
 
+                <p>
+                    Ghana Home Loans, a mortgage finance institution, was founded in 2006 by three men who believed in the
+                    ideal that every Ghanaian should have an opportunity to own their dream home. In June 2017, we obtained our
+                    universal banking license under the name GHL Bank Ltd. In addition to the provision of mortgage products and
+                    services, we now offer retail and corporate banking products to meet the needs of both individuals and businesses.
+                </p>
+                <p>
+                    At GHL Bank we understand that building a home can be a demanding task, so we built a model to make this process
+                    as simple and accessible as possible for the sector of the home ownership market who wish to achieve their goals by
+                    building their dream properties rather than purchasing already completed houses on the market.
+                </p>
+
+                <p>
+                    Getting your finances in order is the first and most important consideration when it comes to preparing for a self-build project.
+                    First, perform a realistic audit of your current financial situation to see how much of your personal funds can be
+                    used for the project and to see what you will be willing and able to borrow to fund your project. Our U-Build offer is a unique product designed specifically to help you obtain funds for your self-build project with the aim of providing you with a flexible credit facility which addresses your peculiar needs during your construction project.
+                </p>
+                <p>
+                    The U-Build product is supported by partners within the real estate value chain who have been onboarded unto our
+                    U-BUILD MARKETPLACE to provide easy access to all products and services you will need throughout your building project.
+                    This is to ensure the entire process is seamless and appealing to you, our cherished clients.
+                </p>
+
+                <p>
+                    The U-Build project will be undertaken in 5 phases namely; land purchase, foundation, blockwork to roofing, finishing, and fittings & fixtures. There is the flexibility for you to opt for which phase of the project you will like to apply for.
+                </p>
+                <h4>U-Build: Your Build, Your Way</h4>
+
+            </div>
+        </div>
+    </div>
+</section>
